Fixed #807 - Add new page button overlaps properties grid

--- a/src/components/pages-editor.scss
+++ b/src/components/pages-editor.scss
@@ -20,6 +20,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    overflow: hidden;
 
     .svd-pages {
       white-space: nowrap;
